<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Buyt</string>
    <string name="input_hint_name">Name</string>
    <string name="input_hint_quantity">Quantity</string>
    <string name="input_hint_description">Description (optional)</string>
    <string name="input_hint_price">Total price</string>
    <string name="input_hint_purchase_date">Purchase date</string>
    <string name="input_hint_total_price">Item total price</string>
    <string name="input_def_quantity">1</string>
    <string name="input_suffix_price">" dollar"</string>
    <string name="dialog_title_location_permission">Location denied</string>
    <string name="dialog_title_location_off">Location off</string>
    <string name="dialog_title_select_filter">Select filter</string>
    <string name="dialog_title_select_export_format">Select format</string>
    <string name="dialog_title_exit">Exit the app?</string>
    <string name="dialog_message_exit">The buying process will be aborted if you exit the app.</string>
    <string name="dialog_message_no_store_available">There is no saved store. You should do one or more purchases from at least one store (with find button in main screen) so it can be chosen for future purchases.</string>
    <string name="dialog_action_go_to_settings">Go to Settings</string>
    <string name="dialog_action_skip">Skip finding</string>
    <string name="dialog_action_exit">Exit</string>
    <string name="snackbar_message_item_deleted">Item \"%1$s\" was deleted</string>
    <string name="snackbar_message_store_deleted">Store \"%1$s\" was deleted</string>
    <string name="snackbar_action_undo">UNDO</string>
    <string name="snackbar_message_cart_empty">Shopping list is empty</string>
    <string name="snackbar_message_no_item_selected">No item selected</string>
    <string name="snackbar_message_no_store_found">No saved store! Cannot skip.</string>
    <string name="snackbar_message_start_over">Oops! Buyt was force killed. Please start over your buying process if possible.</string>
    <string name="menu_text_new_store_found">New store</string>
    <string name="menu_text_multiple_stores_found">%1$s stores around here</string>
    <string name="menu_text_multiple_stores_saved">%1$s stores</string>
    <string name="menu_title_select_store">Select store</string>
    <string name="menu_title_add_store">Add new store</string>
    <string name="input_hint_store_category">Category</string>
    <string name="button_text_view_on_map">View on map</string>
    <string name="menu_hint_add_item">Add item</string>
    <string name="menu_hint_skip_finding">Skip finding</string>
    <string name="menu_hint_reorder_items">Reorder items</string>
    <string name="menu_hint_toggle_period">Toggle period</string>
    <string name="menu_hint_filter">Filter by category</string>
    <string name="dialog_message_location_permission">"It seems you have revoked location permission.
        If granted, you do not have to manually specify the store for each purchase.
        The permission could be toggled on in <big><i>Permissions</i></big> section of the app settings.
    </string>
    <string name="dialog_message_location_off">Location is off. Toggle it on
        (in high precision mode) so you won\'t have to manually specify the store for each purchase.
    </string>
    <string name="dialog_message_billing_error">Problem setting up in-app billing.
        Make sure <big><i>Bazaar</i></big> is installed on your device.
        If the problem persists try to reinstall Buyt.
    </string>
    <string name="checkbox_urgent">Urgent</string>
    <string name="weekday_sunday">Sunday</string>
    <string name="weekday_monday">Monday</string>
    <string name="weekday_tuesday">Tuesday</string>
    <string name="weekday_wednesday">Wednesday</string>
    <string name="weekday_thursday">Thursday</string>
    <string name="weekday_friday">Friday</string>
    <string name="weekday_saturday">Saturday</string>
    <string name="item_cat_grocery">Grocery</string>
    <string name="item_cat_bread">Bread</string>
    <string name="item_cat_dairy">Dairy</string>
    <string name="item_cat_fruit">Fruit</string>
    <string name="item_cat_meat">Meat</string>
    <string name="item_cat_chicken">Chicken</string>
    <string name="item_cat_fish">Fish</string>
    <string name="item_cat_fast_food">Fast food</string>
    <string name="item_cat_ice_cream">Ice cream</string>
    <string name="item_cat_pastry">Pastry</string>
    <string name="item_cat_herbal_tea">Herbal Tea</string>
    <string name="item_cat_tools">Tools</string>
    <string name="item_cat_drug">Drug</string>
    <string name="item_cat_flower">Flower</string>
    <string name="item_cat_stationary">Stationary</string>
    <string name="item_cat_book">Book</string>
    <string name="item_cat_other">Other</string>
    <string name="store_cat_grocery_store">Grocery store</string>
    <string name="store_cat_bakery">Bakery</string>
    <string name="store_cat_butchery">Butchery</string>
    <string name="store_cat_chicken_shop">Chicken shop</string>
    <string name="store_cat_dairy">Dairy</string>
    <string name="store_cat_fast_food">Fast food</string>
    <string name="store_cat_fish_shop">Fish shop</string>
    <string name="store_cat_grocers">Grocer\'s</string>
    <string name="store_cat_hardware_store">Hardware store</string>
    <string name="store_cat_icecream_shop">Ice cream shop</string>
    <string name="store_cat_confectionery">Confectionery</string>
    <string name="store_cat_herbal_tea_shop">Herbal tea store</string>
    <string name="store_cat_drugstore">Drugstore</string>
    <string name="store_cat_flower_shop">Flower shop</string>
    <string name="store_cat_stationary_store">Stationary store</string>
    <string name="store_cat_book_shop">Bookshop</string>
    <string name="store_cat_other">Other</string>
    <string name="qty_unit">unit</string>
    <string name="qty_kilogram">kg</string>
    <string name="qty_gram">g</string>
    <string name="mdtp_cancel" translatable="false">لغو</string>
    <string name="chart_caption">Expenses per day</string>
    <string name="checkbox_purchased">Already Bought</string>
    <string name="checkbox_purchased_disabled">Already Bought (premium version only)</string>
    <string name="input_def_purchase_date">Today</string>
    <string name="input_hint_store_name">Store name</string>
    <string name="input_error_name">Name cannot be empty</string>
    <string name="input_error_store_name">Name cannot be empty</string>
    <string name="input_error_quantity">Quantity should be specified</string>
    <string name="input_error_price">Price should be specified</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_stores">Stores</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="no_filter">No filter</string>
    <string name="dialog_title_select_store">Select store</string>
    <string name="dialog_title_select_cat">Select category</string>
    <string name="dialog_title_select_search_dist">Select search distance</string>
    <string name="dialog_title_create_store">Create new store</string>
    <string name="currency_format_ones">$###.#</string>
    <string name="currency_format_thousands">$###.#k</string>
    <string name="currency_format_millions_and_billions">$###.#M</string>
    <string name="menu_text_period">last %1$d days</string>
    <string-array name="pref_theme_names" tools:ignore="InconsistentArrays">
        <item>@string/pref_theme_dark</item>
        <item>@string/pref_theme_light</item>
    </string-array>
    <string-array name="pref_theme_vals" tools:ignore="InconsistentArrays">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="pref_theme_auto">Auto (match device)</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_theme_disabled">Theme (premium version only)</string>
    <string name="pref_title_vibrate">Vibrate when store found</string>
    <string name="pref_title_log_scale">Show charts in logarithmic scale</string>
    <string name="pref_title_backup">Backup all app data</string>
    <string name="pref_title_restore">Restore app data from a backup file</string>
    <string name="pref_summary_restore">Current data will be lost (requires restart)</string>
    <string name="pref_summary_log_scale">With no label for costs</string>
    <string name="pref_title_search_radius">Stores search distance</string>
    <string name="dialog_title_select_theme">Select theme</string>
    <string-array name="pref_lang_names">
        <item>@string/pref_lang_auto</item>
        <item>@string/pref_lang_en</item>
        <item>@string/pref_lang_fa</item>
    </string-array>
    <string-array name="pref_lang_vals">
        <item>auto</item>
        <item>en</item>
        <item>fa</item>
    </string-array>
    <string name="pref_lang_auto">Auto (match device)</string>
    <string name="pref_lang_en" translatable="false">English</string>
    <string name="pref_lang_fa" translatable="false">فارسی</string>
    <string name="pref_title_lang">Language</string>
    <string name="pref_title_lang_disabled">Language (premium version only)</string>
    <string name="dialog_title_select_lang">Select language</string>
    <string-array name="pref_search_dist_names">
        <item>@string/pref_search_dist_1</item>
        <item>@string/pref_search_dist_2</item>
        <item>@string/pref_search_dist_3</item>
    </string-array>
    <string-array name="pref_search_dist_vals">
        <item>50</item>
        <item>100</item>
        <item>200</item>
    </string-array>
    <string name="pref_search_dist_1">50 meters</string>
    <string name="pref_search_dist_2">100 meters</string>
    <string name="pref_search_dist_3">200 meters</string>
    <string name="state_total_spent_money">Total Spent money:</string>
    <string name="state_max_purchase_cost">Max purchase cost:</string>
    <string name="state_min_purchase_cost">Min purchase cost:</string>
    <string name="state_weekday_with_most_purchases">Weekday with most purchases:</string>
    <string name="state_average_purchase_cost">Average purchase cost:</string>
    <string name="state_store_with_most_purchases">Store with most purchases:</string>
    <string name="state_number_of_purchases">Number of purchases:</string>
    <string name="pieChart_caption">Top purchased categories</string>
    <string name="dialog_app_info_title_icons">The icons</string>
    <string name="dialog_app_info_desc_icons">Most of the icons used in the Buyt are from Material Design icons. The rest are created by the developer and may have been inspired by icons available on the Web. Almost all of the animated icons are the work of the developer.</string>
    <string name="dialog_app_info_title_font">The font</string>
    <string name="dialog_app_info_desc_font">Buyt uses <i>Vazir</i> for Persian and <i>Roboto</i> for latin text. Vazir has been scaled down a little to better match the latin text.</string>
    <string name="dialog_app_info_title_developer">Developer Web pages</string>
    <string name="dialog_app_info_desc_developer" translatable="false">
        https://mahozad.ir\nhttps://github.com/mahozad\nhttps://cafebazaar.ir/developer/pleon
    </string>
    <string name="dialog_app_info_title_name">Buyt</string>
    <string name="dialog_app_info_desc_name">Name of the application is a portmanteau word blending <i>Buy</i> and <i>It</i> together to make <i>Buyt</i>.</string>
    <string name="dialog_app_info_title_logo">The logo</string>
    <string name="dialog_app_info_desc_logo">In addition to showing the letter <i>B</i> for <i>Buyt</i>, it is composed of two pin shapes that are traditionally used to denote location.</string>
</resources>