<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/scrollView"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
      android:padding="24dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="?colorPrimary"
        android:gravity="center"
        android:text="@string/dialog_app_info_title_name" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:autoLink="web"
        android:text="@string/dialog_app_info_desc_name" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="?colorPrimary"
        android:gravity="center"
        android:text="@string/dialog_app_info_title_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:autoLink="web"
        android:text="@string/dialog_app_info_desc_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="?colorPrimary"
        android:gravity="center"
        android:text="@string/dialog_app_info_title_icons" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:text="@string/dialog_app_info_desc_icons" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="?colorPrimary"
        android:gravity="center"
        android:text="@string/dialog_app_info_title_font" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:autoLink="web"
        android:text="@string/dialog_app_info_desc_font" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="?colorPrimary"
        android:gravity="center"
        android:text="@string/dialog_app_info_title_developer" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:autoLink="web"
        android:textColorLink="@color/linkColor"
        android:lineSpacingExtra="4dp"
        android:text="@string/dialog_app_info_desc_developer" />

  </LinearLayout>

</ScrollView>

